# ecs-game-architecture-plus

./: .gitignore  CMakeLists.txt  ECS_USAGE_GUIDE.md  README.md
src/demo/: README.md  components.hpp  main.cpp  systems.hpp
src/ecs/: component_array.hpp  component_manager.hpp  entity.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  world.hpp
